--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/icon/icons8-corinthians-50.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>projeto portifolio </title>
+    <title>Portifolio </title>
   </head>
   <body>
     <div id="root"></div>
